# codemp-vscode

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json
.cargo/: config
.github/workflows/: publish.yml  test.yml
src/: codemp.ts  commands.ts  extension.ts  lib.rs  mapping.ts  tree.ts
src/commands/: buffers.ts  client.ts  workspaces.ts
src/rust/: buffer.rs  client.rs  cursor.rs  lib.rs  op_cache.rs  workspace.rs
