[package]
name = "codemp-vscode"
version = "0.0.1"
description = "VSCode extension for CodeMP"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
codemp = { git = "ssh://git@github.com/codewithotherpeopleandchangenamelater/codemp.git", tag = "v0.4.5", features = ["global"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3.1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1"
async-trait = "0.1.68"
napi = { version = "2", features = ["full"] } 
napi-derive = "2"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
